       Canon   BJC S520   (EXPERIMENTAL)
       Canon   BJC S530D  (EXPERIMENTAL)
       Canon   BJC S630   (EXPERIMENTAL)
       Canon   BJC S750   (EXPERIMENTAL)
       Canon   BJC S820   (EXPERIMENTAL)
       Canon   BJC S830D  (EXPERIMENTAL)
       Canon   BJC S900   (EXPERIMENTAL)
       Canon   BJC S9000  (EXPERIMENTAL)
       Canon PIXMA mini220(EXPERIMENTAL)
       Canon PIXMA i50    (EXPERIMENTAL)
       Canon PIXMA i70    (EXPERIMENTAL)
       Canon PIXMA i250   (EXPERIMENTAL)
       Canon PIXMA i320   (EXPERIMENTAL)
       Canon PIXMA i350   (EXPERIMENTAL)
       Canon PIXMA i450   (EXPERIMENTAL)
       Canon PIXMA i455   (EXPERIMENTAL)
       Canon PIXMA i470D  (EXPERIMENTAL)
       Canon PIXMA i550   (EXPERIMENTAL)
       Canon PIXMA i900D  (EXPERIMENTAL)
       Canon PIXMA i950   (EXPERIMENTAL)
       Canon PIXMA i960   (EXPERIMENTAL)
       Canon PIXMA i6100  (EXPERIMENTAL)
       Canon PIXMA i6500  (EXPERIMENTAL)
       Canon PIXMA i9100  (EXPERIMENTAL)
       Canon PIXMA i9900  (EXPERIMENTAL)
       Canon PIXMA iP3600 (EXPERIMENTAL)
       Canon PIXMA iP3500 (EXPERIMENTAL)
       Canon PIXMA iP3300 (EXPERIMENTAL)
       Canon PIXMA iP4900 (EXPERIMENTAL)
       Canon PIXMA iP6210D(EXPERIMENTAL)
       Canon PIXMA iP6220D(EXPERIMENTAL)
       Canon PIXMA iP6310D(EXPERIMENTAL)
       Canon PIXMA iP7100 (EXPERIMENTAL)
       Canon PIXMA iP7500 (EXPERIMENTAL)
       Canon PIXMA iP8100 (EXPERIMENTAL)
       Canon PIXMA iP8600 (EXPERIMENTAL)
       Canon PIXMA iP9910 (EXPERIMENTAL)
       Canon PIXMA MP140  (EXPERIMENTAL)
       Canon PIXMA MP190  (EXPERIMENTAL)
       Canon PIXMA MP210  (EXPERIMENTAL)
       Canon PIXMA MP240  (EXPERIMENTAL)
       Canon PIXMA MP375R
       Canon PIXMA MP470  (EXPERIMENTAL)
       Canon PIXMA MP490  (EXPERIMENTAL)
       Canon PIXMA MP530  (EXPERIMENTAL)
       Canon PIXMA MP900  (EXPERIMENTAL)
       Canon PIXMA MG2100 (EXPERIMENTAL)
       Canon PIXMA MG3100 (EXPERIMENTAL)
       Canon PIXMA MG4100 (EXPERIMENTAL)