@@ -1038,6 +1038,20 @@ static const canon_inkset_t canon_11_C5M5Y3k4_inkset[] = {
         {0,0.0,NULL}
 };
 
+static const canon_inkset_t canon_11_C5M5Y4k4_inkset[] = {
+        {'C',1.0,&canon_4b_5l_ink},
+        {'M',1.0,&canon_4b_5l_ink},
+        {'Y',1.0,&canon_2b_4l_ink},
+        {0,0.0,NULL},
+        {0,0.0,NULL},
+        {0,0.0,NULL},
+        {0,0.0,NULL},
+        {'k',1.0,&canon_2b_4l_ink},
+        {0,0.0,NULL},
+        {0,0.0,NULL},
+        {0,0.0,NULL}
+};
+
 /* Pro9000 */
 static const canon_inkset_t canon_11_C5M5Y5K5c5m5_c_inkset[] = {
         {'C',1.0,&canon_4b_5l_c_ink},
